<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/im_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/f1_main_picture"
        android:contentDescription="@string/im_content_description"
        android:scaleType="fitXY" />

    <ImageButton
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/im_btn_settings"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/img_settings"/>
    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/btn_main_color"
        android:onClick="onClick"
        android:text="@string/btn_new_game"
        android:textColor="@drawable/btn_main_textcolor" />

    <Button
        android:id="@+id/btn_statistic"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_new_game"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_main_color"
        android:onClick="onClick"
        android:text="@string/btn_statistic"
        android:textColor="@drawable/btn_main_textcolor" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_statistic"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_main_color"
        android:text="@string/btn_rules"
        android:textColor="@drawable/btn_main_textcolor"
        android:id="@+id/btn_rules"
        android:onClick="onClick"/>
</RelativeLayout>
